<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NewUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ardestine"
                android:tag="sport"
                android:text="@string/ageString"
                android:textSize="@dimen/label_font_size" />

            <Spinner
                android:id="@+id/ageSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:entries="@array/ages"
                android:fontFamily="@font/ardestine"
                android:prompt="@string/enterAge"
                android:tag="sport"
                android:textSize="@dimen/label_font_size" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/maleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:onClick="toggleMaleFemale"
                android:scaleType="centerInside"
                android:src="@drawable/male_off" />

            <ImageButton
                android:id="@+id/femaleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:onClick="toggleMaleFemale"
                android:scaleType="centerInside"
                android:src="@drawable/female_on"
                android:text="@string/female" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ardestine"
            android:text="@string/fields_of_interest"
            android:textSize="@dimen/label_font_size" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <ImageButton
                    android:id="@+id/topic_sport"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:checked="false"
                    android:onClick="toggleTopic"
                    android:scaleType="centerInside"
                    android:src="@drawable/sport_off"
                    android:tag="sport" />

                <ImageButton
                    android:id="@+id/topic_music"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="toggleTopic"
                    android:scaleType="centerInside"
                    android:src="@drawable/music_off"
                    android:tag="music" />

                <ImageButton
                    android:id="@+id/topic_movies"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="toggleTopic"
                    android:scaleType="centerInside"
                    android:src="@drawable/movies_off"
                    android:tag="movies" />
            </TableRow>

            <TableRow>

                <ImageButton
                    android:id="@+id/topic_series"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="toggleTopic"
                    android:scaleType="centerInside"
                    android:src="@drawable/series_off"
                    android:tag="series" />

                <ImageButton
                    android:id="@+id/topic_clothes"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="toggleTopic"
                    android:scaleType="centerInside"
                    android:src="@drawable/clothes_off"
                    android:tag="clothes" />

                <ImageButton
                    android:id="@+id/topic_news"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="toggleTopic"
                    android:scaleType="centerInside"
                    android:src="@drawable/news_off"
                    android:tag="news" />
            </TableRow>

            <TableRow>

                <ImageButton
                    android:id="@+id/topic_art"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="toggleTopic"
                    android:scaleType="centerInside"
                    android:src="@drawable/art_off"
                    android:tag="art" />

                <ImageButton
                    android:id="@+id/topic_kids"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="toggleTopic"
                    android:scaleType="centerInside"
                    android:src="@drawable/kids_off"
                    android:tag="kids" />

                <ImageButton
                    android:id="@+id/topic_tech"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:onClick="toggleTopic"
                    android:scaleType="centerInside"
                    android:src="@drawable/tech_off"
                    android:tag="tech" />
            </TableRow>

        </TableLayout>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:onClick="submitNewUser"
            android:scaleType="centerInside"
            android:src="@drawable/submit2" />
    </LinearLayout>

</ScrollView>